--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nor-api-session",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Session API builder",
   "main": "src/session.js",
   "scripts": {
@@ -21,11 +21,11 @@
   },
   "homepage": "https://github.com/sendanor/nor-api-session",
   "dependencies": {
-    "merge":       ">= 1.1.3  < 1.2.0",
-    "nor-is":      ">= 0.1.11 < 0.2.0",
-    "nor-data":    ">= 0.0.6  < 0.1.0",
-    "nor-debug":   ">= 0.1.32 < 0.2.0",
-    "nor-express": ">= 0.1.33 < 0.2.0",
-    "nor-ref":     ">= 0.1.0  < 0.2.0"
+    "nor-is":      ">= 0.1.12 < 0.2.0",
+    "nor-data":    ">= 0.0.7  < 0.1.0",
+    "nor-debug":   ">= 0.1.34 < 0.2.0",
+    "nor-express": ">= 0.1.35 < 0.2.0",
+    "nor-ref":     ">= 0.1.0  < 0.2.0",
+    "merge":       ">= 1.1.3  < 1.2.0"
   }
 }
