--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "nor-api-session",
-  "version": "0.1.15",
+  "version": "0.1.16",
   "description": "Session API builder",
   "main": "src/session.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "node-lint src/ --config=lint.json",
+    "jshint": "jshint src/"
   },
   "repository": {
     "type": "git",
@@ -21,11 +23,18 @@
   },
   "homepage": "https://github.com/sendanor/nor-api-session",
   "dependencies": {
+    "q"            : ">= 1.0.1  < 1.1.0",
     "nor-is":      ">= 0.1.16 < 0.2.0",
     "nor-data":    ">= 0.0.16  < 0.1.0",
+    "nor-array":   ">= 0.1.5 < 0.2.0",
     "nor-debug":   ">= 0.1.47 < 0.2.0",
-    "nor-express": ">= 0.1.51 < 0.2.0",
+    "nor-express": ">= 0.1.52 < 0.2.0",
     "nor-ref":     ">= 0.1.2  < 0.2.0",
     "merge":       ">= 1.1.3  < 1.2.0"
+  },
+  "devDependencies": {
+    "lint"         : "*",
+    "jshint"       : "*",
+    "mocha"        : "*"
   }
 }
